--- a/src/main/webapp/coddingbattle.html
+++ b/src/main/webapp/coddingbattle.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Comfortaa" rel="stylesheet">
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
