search button added

--- a/src/main/webapp/coddingbattle.html
+++ b/src/main/webapp/coddingbattle.html
@@ -52,9 +52,14 @@
             <li id="home">
                 Home
             </li>
+            <li id="search">
+                Search
+            </li>
             <li id="logo">
                 Team #3
             </li>
+            <!--<li id="avatar">
+            </li>!-->
         </ul>
     </header>
     <h1>Web Application Starter Project</h1>
