--- a/src/main/webapp/coddingbattle.html
+++ b/src/main/webapp/coddingbattle.html
@@ -43,6 +43,9 @@
 <header>
     <header>
         <ul>
+            <li id="avatar">
+                <img  src="../resources/img/user.svg" alt="">
+            </li>
             <li id="purchases">
                 Purchases
             </li>
@@ -58,8 +61,6 @@
             <li id="logo">
                 Team #3
             </li>
-            <!--<li id="avatar">
-            </li>!-->
         </ul>
     </header>
     <h1>Web Application Starter Project</h1>
