styles for user info

--- a/src/main/webapp/coddingbattle.html
+++ b/src/main/webapp/coddingbattle.html
@@ -43,15 +43,21 @@
     <header>
         <ul>
             <li id="avatar">
-                <img src="../resources/img/user.svg" alt="">
+                <img src="resources/img/user.svg" alt="">
             </li>
             <li id="purchases">
+                    Purchases
             </li>
             <li id="friends">
+                Friends
             </li>
             <li id="home">
+                Home
             </li>
             <li id="search">
+                <button>
+                    Search
+                </button>
             </li>
             <li id="logo">
                 Team #3
@@ -60,21 +66,35 @@
     </header>
     <main>
         <div id="banner">
-            <img src="../resources/img/banner.jpg" alt="">
+            <img src="resources/img/banner.jpg" alt="">
         </div>
-        <h1>Web Application Starter Project</h1>
-        <table align="center">
-            <tr>
-                <td colspan="2" style="font-weight:bold;">Please enter your name:</td>
-            </tr>
-            <tr>
-                <td id="nameFieldContainer"></td>
-                <td id="sendButtonContainer"></td>
-            </tr>
-            <tr>
-                <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
-            </tr>
-        </table>
+        <!--<div class="gwt-DialogBox">-->
+            <!--Dialog-->
+            <!--<textArea>-->
+                <!--jjj-->
+            <!--</textArea>-->
+            <!--<button>-->
+                <!--Send-->
+            <!--</button>-->
+        <!--</div>-->
+        <h1 id="greeting">Web Application Starter Project</h1>
+        <article id="user">
+            <img src="resources/img/user.svg" alt="">
+           <ul id="games">
+               <li>
+                   <p>Title1</p>
+                   <p>Played</p>
+               </li>
+               <li>
+                   <p>Title2</p>
+                   <p>Played</p>
+               </li>
+               <li>
+                   <p>Title3</p>
+                   <p>Played</p>
+               </li>
+           </ul>
+        </article>
     </main>
 </body>
 </html>
