styles for user info

--- a/src/main/webapp/coddingbattle.html
+++ b/src/main/webapp/coddingbattle.html
@@ -45,6 +45,9 @@
             <li id="avatar">
                 <img src="resources/img/user.svg" alt="">
             </li>
+            <li id="requests">
+                30
+            </li>
             <li id="purchases">
                     Purchases
             </li>
